--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "nodesept2022",
   "version": "1.0.0",
   "description": "Sept-2022",
-  "main": "app.js",
+  "main": "src/app.ts",
   "dependencies": {
     "express": "^4.18.2"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "rimraf dist && tsc-watch --onSuccess 'npm run watch'",
+    "watch": "nodemon 'src/app.ts' --watch './src'"
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,12 @@
   "bugs": {
     "url": "https://github.com/ArtemKhil/nodeSept2022/issues"
   },
-  "homepage": "https://github.com/ArtemKhil/nodeSept2022#readme"
+  "homepage": "https://github.com/ArtemKhil/nodeSept2022#readme",
+  "devDependencies": {
+    "@types/express": "^4.17.17",
+    "rimraf": "^4.2.0",
+    "tsc-watch": "^6.0.0",
+    "nodemon": "^2.0.21",
+    "ts-node": "^10.9.1"
+  }
 }
