--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "Sept-2022",
   "main": "src/app.ts",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^7.0.1"
   },
   "scripts": {
-    "start": "rimraf dist && tsc-watch --onSuccess 'npm run watch'",
-    "watch": "nodemon 'src/app.ts' --watch './src'"
+    "start": "rimraf dist && tsc-watch --onSuccess \"npm run watch\"",
+    "watch": "nodemon \"src/app.ts\" --watch \"./src\""
   },
   "repository": {
     "type": "git",
@@ -22,10 +23,18 @@
   },
   "homepage": "https://github.com/ArtemKhil/nodeSept2022#readme",
   "devDependencies": {
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-config-prettier": "^8.7.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "@types/express": "^4.17.17",
-    "rimraf": "^4.2.0",
-    "tsc-watch": "^6.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.54.1",
+    "@typescript-eslint/parser": "^5.54.1",
+    "eslint": "^8.35.0",
     "nodemon": "^2.0.21",
-    "ts-node": "^10.9.1"
+    "rimraf": "^4.2.0",
+    "ts-node": "^10.9.1",
+    "tsc-watch": "^6.0.0",
+    "typescript": "^4.9.5"
   }
 }
