--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Sept-2022",
   "main": "src/app.ts",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^7.0.1"
   },
@@ -23,14 +24,14 @@
   },
   "homepage": "https://github.com/ArtemKhil/nodeSept2022#readme",
   "devDependencies": {
-    "eslint-plugin-simple-import-sort": "^10.0.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-config-prettier": "^8.7.0",
-    "eslint-plugin-prettier": "^4.2.1",
     "@types/express": "^4.17.17",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
     "eslint": "^8.35.0",
+    "eslint-config-prettier": "^8.7.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
     "nodemon": "^2.0.21",
     "rimraf": "^4.2.0",
     "ts-node": "^10.9.1",
