--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.1",
     "nodemailer": "^6.9.1",
+    "socket.io": "^4.6.1",
+    "swagger-ui-express": "^4.6.2",
     "twilio": "^4.9.0",
     "uuid": "^9.0.0"
   },
@@ -39,10 +41,11 @@
     "@types/bcrypt": "^5.0.0",
     "@types/cron": "^2.0.1",
     "@types/email-templates": "^10.0.1",
-    "@types/express-fileupload": "^1.4.1",
     "@types/express": "^4.17.17",
+    "@types/express-fileupload": "^1.4.1",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/nodemailer": "^6.4.7",
+    "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
